# ftcqueue

./: .gitignore  LICENSE  README.md  env.sh.example
.github/workflows/: lint.yaml
agent/: agent.py  config.ini.example
api/: Dockerfile  pyproject.toml
api/src/ftc_queueing_api/: __init__.py  config.py  discord.py  models.py
deploy/: discord.tf  google.tf  main.tf  providers.tf  variables.tf
deploy/modules/discord/: main.tf  outputs.tf  variables.tf
deploy/modules/gcp/: main.tf  variables.tf
