[project]
name = "ftc_queueing_api"
version = "0.1.4"
description = ""
authors = [
    {name = "Joe Abbate",email = "joe@joeabbate.me"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.121.2,<0.122.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "requests (>=2.32.5,<3.0.0)",
    "pynacl (>=1.6.1,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pymysql (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)"
]
